Fix nav padding wrap

--- a/default.css
+++ b/default.css
@@ -241,7 +241,7 @@
    nav li a {
      border: none;
      font-size: 1em;
-     padding: 20px
+     padding: 15px
    }
    .burger-nav {
      display: none;
